--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
     </head>
 
     <body>
-        <label for="score">Score:</label>
-        <label for="punti" id="punti">0</label>
+        <div id="container">
+            <div id="score">
+                <label for="score">Score: </label>
+                <label for="punti" id="punti">0</label>
+            </div>
+            <br>
+            <div id="bestscore">
+                <label for="bestscore">Best Score: </label>
+                <label for="Bpunti" id="Bpunti">0</label>
+            </div>
+        </div>
         <canvas width="400" height="400" id="game"></canvas>
 
         <script src="main.js"></script>
